--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
     </footer>
     <div class="popup">
       <div class="popup__container">
-        <button class="poput__button-close" type="button"></button>
-        <h2 class="poput__title">Редактировать профиль</h2>
-        <form action="#" class="poput__form" name="form-info">
+        <button type="button" class="popup__button-close"></button>
+        <h2 class="popup__title">Редактировать профиль</h2>
+        <form action="#" class="popup__form" name="form-info">
           <input
             type="text"
             name="profile-name"
