--- a/index.html
+++ b/index.html
@@ -37,95 +37,12 @@
           type="button"
         ></button>
       </section>
-      <section class="places">
-        <article class="place">
-          <img
-            class="place__image"
-            src="./images/zamok.jpg"
-            alt="Карачаевские виды"
-          />
-          <div class="place__info">
-            <h2 class="place__title">Карачаевск</h2>
-            <button
-              class="place__button-like"
-              aria-label="Лайк"
-              type="button"
-            ></button>
-          </div>
-        </article>
-
-        <article class="place">
-          <img
-            class="place__image"
-            src="./images/gora.jpg"
-            alt="Поля и туман"
-          />
-          <div class="place__info">
-            <h2 class="place__title">Гора Эльбрус</h2>
-            <button
-              class="place__button-like"
-              aria-label="Лайк"
-              type="button"
-            ></button>
-          </div>
-        </article>
-
-        <article class="place">
-          <img class="place__image" src="./images/les.jpg" alt="Лес с горой" />
-          <div class="place__info">
-            <h2 class="place__title">Домбай</h2>
-            <button class="place__button-like" type="button"></button>
-          </div>
-        </article>
-
-        <article class="place">
-          <img
-            class="place__image"
-            src="./images/gora.jpg"
-            alt="Поля и туман"
-          />
-          <div class="place__info">
-            <h2 class="place__title">Гора Эльбрус</h2>
-            <button
-              class="place__button-like"
-              aria-label="Лайк"
-              type="button"
-            ></button>
-          </div>
-        </article>
-
-        <article class="place">
-          <img class="place__image" src="./images/les.jpg" alt="Лес с горой" />
-          <div class="place__info">
-            <h2 class="place__title">Домбай</h2>
-            <button
-              class="place__button-like"
-              aria-label="Лайк"
-              type="button"
-            ></button>
-          </div>
-        </article>
-
-        <article class="place">
-          <img
-            class="place__image"
-            src="./images/zamok.jpg"
-            alt="Карачаевские виды"
-          />
-          <div class="place__info">
-            <h2 class="place__title">Карачаево-Черкессия</h2>
-            <button
-              class="place__button-like"
-              aria-label="Лайк"
-              type="button"
-            ></button>
-          </div>
-        </article>
-      </section>
+      <section class="places"></section>
     </main>
     <footer class="footer">
       <p class="footer__content">&copy; 2020 Mesto Russia</p>
     </footer>
+
     <div class="popup">
       <div class="popup__container">
         <button type="button" class="popup__button-close"></button>
@@ -147,6 +64,71 @@
         </form>
       </div>
     </div>
+
+    <div class="popup popup_type_card">
+      <div class="popup__container popup__container_type_card">
+        <button type="button" class="popup__button-close"></button>
+        <h2 class="popup__title popup__title_type_card">Новое место</h2>
+        <form
+          action="#"
+          class="popup__form popup__form_type_card"
+          name="form-info"
+        >
+          <input
+            type="text"
+            name="name"
+            class="popup__input popup__input_name_card-name"
+            placeholder="Название"
+          />
+          <input
+            type="text"
+            name="caption"
+            class="popup__input popup__input_name_card-caption"
+            placeholder="Ссылка на картинку"
+          />
+          <button
+            type="submit"
+            class="popup__button-save popup__button-save_type_card"
+          >
+            Создать
+          </button>
+        </form>
+      </div>
+    </div>
+
+    <div class="popup-image">
+      <div class="popup-image__box">
+        <figure class="popup-image__container">
+          <img class="popup-image__foto" src="#" />
+          <figcaption class="popup-image__sign"></figcaption>
+        </figure>
+        <button class="popup-image__close" type="button"></button>
+      </div>
+    </div>
+
+    <!--<div class="popup popup_type_view">
+      <div class="popup__container-view">
+        <button type="button" class="popup__button-close"></button>
+        <img class="popup__photo" src="#" alt="#">
+        <p class="popup__caption"></p>
+      </div>
+    </div>-->
+
+    <template id="place-template">
+      <article class="place">
+        <button class="place__button-delete" type="button"></button>
+        <img class="place__image" src="#" alt="Фото" />
+        <div class="place__info">
+          <h2 class="place__title"></h2>
+          <button
+            class="place__button-like"
+            aria-label="Лайк"
+            type="button"
+          ></button>
+        </div>
+      </article>
+    </template>
+
     <script src="./scripts/index.js"></script>
   </body>
 </html>
