--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <img
             class="profile__photo"
             src="./images/kusto.png"
-            alt="ПрофильФото"
+            alt="Профиль Фото"
           />
           <div class="profile__bio">
             <div class="profile__info">
@@ -43,24 +43,36 @@
       <p class="footer__content">&copy; 2020 Mesto Russia</p>
     </footer>
 
-    <div class="popup">
+    <div class="popup" id="popup__author">
       <div class="popup__container">
-        <button type="button" class="popup__button-close"></button>
+        <button
+          type="button"
+          aria-label="Закрыть"
+          class="popup__button-close"
+        ></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form action="#" class="popup__form" name="form-info">
+        <form class="popup__form" name="form-info">
           <input
+            required
             type="text"
             name="name"
             class="popup__input popup__input_name_profile-name"
             placeholder="Введите имя"
           />
           <input
+            required
             type="text"
             name="caption"
             class="popup__input popup__input_name_profile-caption"
             placeholder="Введите описание"
           />
-          <button type="submit" class="popup__button-save">Сохранить</button>
+          <button
+            type="submit"
+            aria-label="Сохранить"
+            class="popup__button-save"
+          >
+            Сохранить
+          </button>
         </form>
       </div>
     </div>
@@ -81,7 +93,7 @@
             placeholder="Название"
           />
           <input
-            type="text"
+            type="url"
             name="caption"
             class="popup__input popup__input_name_card-caption"
             placeholder="Ссылка на картинку"
@@ -96,23 +108,15 @@
       </div>
     </div>
 
-    <div class="popup-image">
+    <div class="popup popup-image">
       <div class="popup-image__box">
         <figure class="popup-image__container">
           <img class="popup-image__foto" src="#" />
           <figcaption class="popup-image__sign"></figcaption>
         </figure>
-        <button class="popup-image__close" type="button"></button>
+        <button class="popup__button-close" type="button"></button>
       </div>
     </div>
-
-    <!--<div class="popup popup_type_view">
-      <div class="popup__container-view">
-        <button type="button" class="popup__button-close"></button>
-        <img class="popup__photo" src="#" alt="#">
-        <p class="popup__caption"></p>
-      </div>
-    </div>-->
 
     <template id="place-template">
       <article class="place">
@@ -128,7 +132,7 @@
         </div>
       </article>
     </template>
-
-    <script src="./scripts/index.js"></script>
+    <script defer src="./scripts/constant.js"></script>
+    <script defer src="./scripts/index.js"></script>
   </body>
 </html>
