--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <img class="popup-image__foto" src="#" />
           <figcaption class="popup-image__sign"></figcaption>
         </figure>
-        <button class="popup__button-close" type="button"></button>
+        <button class="popup__image-close" type="button"></button>
       </div>
     </div>
 
