--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       <p class="footer__content">&copy; 2020 Mesto Russia</p>
     </footer>
 
+    <!--Форма редактирования-->
     <div class="popup" id="popup__author">
       <div class="popup__container">
         <button
@@ -56,27 +57,32 @@
             required
             type="text"
             name="name"
+            id="author-name-input"
             class="popup__input popup__input_name_profile-name"
             placeholder="Введите имя"
+            minlength="2"
+            maxlength="40"
           />
+          <span class="author-name-input-error popup__info-error"></span>
           <input
             required
             type="text"
             name="caption"
+            id="job-author-input"
             class="popup__input popup__input_name_profile-caption"
             placeholder="Введите описание"
+            minlength="2"
+            maxlength="200"
           />
-          <button
-            type="submit"
-            aria-label="Сохранить"
-            class="popup__button-save"
-          >
+          <span class="job-author-input-error popup__info-error"></span>
+          <button type="submit" aria-label="Сохранить" class="popup__save">
             Сохранить
           </button>
         </form>
       </div>
     </div>
 
+    <!--Форма добавления места-->
     <div class="popup popup_type_card">
       <div class="popup__container popup__container_type_card">
         <button type="button" class="popup__button-close"></button>
@@ -90,24 +96,34 @@
             type="text"
             name="name"
             class="popup__input popup__input_name_card-name"
+            id="card-name-input"
             placeholder="Название"
+            required
+            minlength="2"
+            maxlength="30"
           />
+          <!--card-name-input-error popup__info-error-->
+          <span class="card-name-input-error popup__info-error"></span>
+          <!--popup__input-error place-name-error-->
           <input
             type="url"
             name="caption"
             class="popup__input popup__input_name_card-caption"
+            id="card-link-input"
             placeholder="Ссылка на картинку"
+            required
           />
-          <button
-            type="submit"
-            class="popup__button-save popup__button-save_type_card"
-          >
+          <!--popup__info popup__info_input_card-link-->
+          <span class="card-link-input-error popup__info-error"></span>
+          <!--popup__input-error place-link-error-->
+          <button type="submit" class="popup__save popup__save_type_card">
             Создать
           </button>
         </form>
       </div>
     </div>
 
+    <!--Просмотр фото-->
     <div class="popup popup-image">
       <div class="popup-image__box">
         <figure class="popup-image__container">
@@ -118,6 +134,7 @@
       </div>
     </div>
 
+    <!--Шаблон карточки-->
     <template id="place-template">
       <article class="place">
         <button class="place__button-delete" type="button"></button>
@@ -134,5 +151,6 @@
     </template>
     <script defer src="./scripts/constant.js"></script>
     <script defer src="./scripts/index.js"></script>
+    <script defer src="./scripts/validate.js"></script>
   </body>
 </html>
