--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           class="popup__button-close"
         ></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form class="popup__form" name="form-info">
+        <form class="popup__form popup__form_type_author" name="form-info">
           <input
             required
             type="text"
@@ -102,9 +102,7 @@
             minlength="2"
             maxlength="30"
           />
-          <!--card-name-input-error popup__info-error-->
           <span class="card-name-input-error popup__info-error"></span>
-          <!--popup__input-error place-name-error-->
           <input
             type="url"
             name="caption"
@@ -113,9 +111,7 @@
             placeholder="Ссылка на картинку"
             required
           />
-          <!--popup__info popup__info_input_card-link-->
           <span class="card-link-input-error popup__info-error"></span>
-          <!--popup__input-error place-link-error-->
           <button type="submit" class="popup__save popup__save_type_card">
             Создать
           </button>
