--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     </div>
 
     <!--Шаблон карточки-->
-    <template id="place-template">
+    <template id="place-template" class="place-template">
       <article class="place">
         <button class="place__button-delete" type="button"></button>
         <img class="place__image" src="#" alt="Фото" />
@@ -145,8 +145,6 @@
         </div>
       </article>
     </template>
-    <script defer src="./scripts/constant.js"></script>
-    <script defer src="./scripts/index.js"></script>
-    <script defer src="./scripts/validate.js"></script>
+    <script defer type="module" src="./scripts/index.js"></script>
   </body>
 </html>
