--- a/src/index.html
+++ b/src/index.html
@@ -1,148 +1,93 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Project mesto</title>
-  </head>
-  <body class="page">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mesto</title>
+</head>
+<body class="page">
     <header class="header">
-      <img class="header__logo" src="<%=require('./images/Vector.svg')%>" alt="Логотип Место" />
+        <img src="<%=require('./images/logo.svg')%>" alt="логотип" class="header__logo">
     </header>
-    <main class="main">
-      <section class="profile">
-        <div class="profile__content">
-          <img
-            class="profile__photo"
-            src="<%=require('./images/kusto.png')%>"
-            alt="Профиль Фото"
-          />
-          <div class="profile__bio">
-            <div class="profile__info">
-              <h1 class="profile__title">Жак-Ив Кусто</h1>
-              <button
-                class="profile__edit-button"
-                aria-label="Изменить"
-                type="button"
-              ></button>
+    <main class="content">
+        <section class="profile">
+            <button class="profile__avatar-update" type="button" name="avatar-update"><img src="#" alt="Аватар пользователя" class="profile__avatar"></button>
+            <div class="profile__container">
+                <h1 class="profile__person"></h1>
+                <p class="profile__job"></p>
+                <button class="profile__edit" type="button" aria-label="редактировать профиль"><img src="<%=require('./images/pencil-icon.svg')%>" alt="иконка карандаш" ></button>
             </div>
-            <p class="profile__subtitle">Иследователь океана</p>
-          </div>
-        </div>
-        <button
-          class="profile__add-button"
-          aria-label="Добавить"
-          type="button"
-        ></button>
-      </section>
-      <section class="places"></section>
+            <button class="profile__add-button" type="button" aria-label="добавить"><img src="<%=require('./images/plus_icon.svg')%>" alt="иконка плюс"></button>
+        </section>
+        <section class="cards">
+            <ul class="cards-list">
+            </ul>
+        </section>
     </main>
     <footer class="footer">
-      <p class="footer__content">&copy; 2020 Mesto Russia</p>
+        <p class="footer__copyright">&copy; 2022</p>
     </footer>
 
-    <!--Форма редактирования-->
-    <div class="popup popup_type_author" id="popup__author">
-      <div class="popup__container">
-        <button
-          type="button"
-          aria-label="Закрыть"
-          class="popup__button-close"
-        ></button>
-        <h2 class="popup__title">Редактировать профиль</h2>
-        <form class="popup__form popup__form_type_author" name="form-info">
-          <input
-            required
-            type="text"
-            name="name"
-            id="author-name-input"
-            class="popup__input popup__input_name_profile-name"
-            placeholder="Введите имя"
-            minlength="2"
-            maxlength="40"
-          />
-          <span class="author-name-input-error popup__info-error"></span>
-          <input
-            required
-            type="text"
-            name="caption"
-            id="job-author-input"
-            class="popup__input popup__input_name_profile-caption"
-            placeholder="Введите описание"
-            minlength="2"
-            maxlength="200"
-          />
-          <span class="job-author-input-error popup__info-error"></span>
-          <button type="submit" aria-label="Сохранить" class="popup__save">
-            Сохранить
-          </button>
+    <div class="popup popup_type_profile-edit">
+        <form class="popup__form" name="profileEdit" method="post" novalidate>
+            <h2 class="popup__title">Редактировать профиль</h2>
+            <input class="popup__input popup__input_type_user-name" id="name" type="text" name="name" placeholder="Имя" minlength="2" maxlength="40" required>
+            <span class="popup__error" id="name-error"></span>
+            <input class="popup__input popup__input_type_user-job" id="job" type="text" name="about" placeholder="О себе" minlength="2" maxlength="200" required>
+            <span class="popup__error" id="job-error"></span>
+            <button class="popup__button" type="submit">Сохранить</button>
+            <button type="button" class="popup__close" aria-label="закрыть"><img src="<%=require('./images/close_icon.svg')%>" alt="иконка закрыть" class="popup__icon"></button>
         </form>
-      </div>
     </div>
-
-    <!--Форма добавления места-->
-    <div class="popup popup_type_card">
-      <div class="popup__container popup__container_type_card">
-        <button type="button" class="popup__button-close"></button>
-        <h2 class="popup__title popup__title_type_card">Новое место</h2>
-        <form
-          action="#"
-          class="popup__form popup__form_type_card"
-          name="form-info"
-        >
-          <input
-            type="text"
-            name="name"
-            class="popup__input popup__input_name_card-name"
-            id="card-name-input"
-            placeholder="Название"
-            required
-            minlength="2"
-            maxlength="30"
-          />
-          <span class="card-name-input-error popup__info-error"></span>
-          <input
-            type="url"
-            name="caption"
-            class="popup__input popup__input_name_card-caption"
-            id="card-link-input"
-            placeholder="Ссылка на картинку"
-            required
-          />
-          <span class="card-link-input-error popup__info-error"></span>
-          <button type="submit" class="popup__save popup__save_type_card">
-            Создать
-          </button>
+    <div class="popup popup_type_card-add">
+        <form class="popup__form" name="cardAdd" method="post" novalidate>
+            <h2 class="popup__title">Новое место</h2>
+            <input class="popup__input popup__input_type_place-name" id="text" type="text" name="name" placeholder="Название" minlength="2" maxlength="30" required>
+            <span class="popup__error" id="text-error"></span>
+            <input class="popup__input popup__input_type_image-url" id="url" type="url" name="link" placeholder="Ссылка на картинку" required>
+            <span class="popup__error" id="url-error"></span>
+            <button class="popup__button" type="submit">Создать</button>
+            <button type="button" class="popup__close" aria-label="закрыть"><img src="<%=require('./images/close_icon.svg')%>" alt="иконка закрыть" class="popup__icon"></button>
         </form>
-      </div>
     </div>
-
-    <!--Просмотр фото-->
-    <div class="popup popup-image">
-      <div class="popup-image__box">
-        <figure class="popup-image__container">
-          <img class="popup-image__foto" src="#" />
-          <figcaption class="popup-image__sign"></figcaption>
-        </figure>
-        <button class="popup__button-close" type="button"></button>
-      </div>
-    </div>
-
-    <!--Шаблон карточки-->
-    <template id="place-template" class="place-template">
-      <article class="place">
-        <button class="place__button-delete" type="button"></button>
-        <img class="place__image" src="#" alt="Фото" />
-        <div class="place__info">
-          <h2 class="place__title"></h2>
-          <button
-            class="place__button-like"
-            aria-label="Лайк"
-            type="button"
-          ></button>
+    <div class="popup popup_type_show-image">
+        <div class="popup__container">
+            <button type="button" class="popup__close" aria-label="закрыть"><img src="<%=require('./images/close_icon.svg')%>" alt="иконка закрыть" class="popup__icon"></button>
+            <img src="<%=require('./images/moscow.jpg')%>" alt="" class="popup__image">
+            <p class="popup__text"></p>
         </div>
-      </article>
+    </div>
+    <div class="popup popup_type_confirm">
+        <div class="popup__form">
+            <h2 class="popup__title popup__title_type_confirm">Вы уверены?</h2>
+            <input class="popup__button" type="submit" value="Да">
+            <button type="button" class="popup__close" aria-label="закрыть"><img src="<%=require('./images/close_icon.svg')%>" alt="иконка закрыть" class="popup__icon"></button>
+        </div>
+    </div>
+    <div class="popup popup_type_avatar-save">
+        <form class="popup__form" name="avatarSave" method="post" novalidate>
+            <h2 class="popup__title popup__title_type_avatar-save">Обновить аватар</h2>
+            <input class="popup__input popup__input_type_image-url" id="avatar" type="url" name="avatar" placeholder="Ссылка на картинку" required>
+            <span class="popup__error" id="avatar-error"></span>
+            <button class="popup__button" type="submit">Сохранить</button>
+            <button type="button" class="popup__close" aria-label="закрыть"><img src="<%=require('./images/close_icon.svg')%>" alt="иконка закрыть" class="popup__icon"></button>
+        </form>
+    </div>
+
+    <template id="card">
+        <li class="cards-list__card-container">
+            <img src="<%=require('./images/moscow.jpg')%>" alt="изображение места" class="cards-list__card-image">
+            <img src="<%=require('./images/bin_icon.svg')%>" alt="иконка удаления" class="cards-list__card-bin">
+            <div class="cards-list__info">
+                <h2 class="cards-list__name"></h2>
+                <div class="cards-list__like-container">
+                    <button type="button" class="cards-list__like" aria-label="лайк"></button>
+                    <div class="cards-list__like-counter"></div>
+                </div>
+            </div>
+        </li>
     </template>
-  </body>
+     
+</body>
 </html>
